--- a/Working Code/With Slider/html/28.html
+++ b/Working Code/With Slider/html/28.html
@@ -13,9 +13,10 @@
 <body onload="init()"
 id="Sophie">
 <div class="day">
-    <h4><i>Tuesday, noon</i></h4>    
+    <h4><i>Tuesday, afternoon</i></h4>    
     </div>
-
+    <br>
+    <br>
     <div class="content">
         <p>
  
