--- a/Working Code/With Slider/html/17.5.html
+++ b/Working Code/With Slider/html/17.5.html
@@ -28,7 +28,7 @@
                     <div class="slidecontainer">
                         <input type="range" min="1" max="100" value="0" class="slider" id="myRange">
                     </div>
-                    <div>
+                    <div class="anger">
                         <h2 id="anger1" class="anger1">Not angry at all</h2>
                         <h2 id="anger2" class="anger2">Provoked</h2>
                         <h2 id="anger3" class="anger3">Angry</h2>
